fixed overflow problem

--- a/src/app.scss
+++ b/src/app.scss
@@ -36,6 +36,7 @@ body {
   font-family: sans-serif, 'Lato';
   color: $lapis;
   line-height: 27.79px;
+  width: fit-content;
 }
 
 img {
@@ -55,6 +56,8 @@ a {
     background-color: $white;
     height: 100%;
     max-width: 1440px;
+    width: 100%;
+    margin: 0 auto;
   }
   
   //-------------------------------------------//
@@ -599,7 +602,8 @@ a {
 .ellipse-17 {
   border: 24px solid $sky-blue;
   position: absolute;
-  left: 1390px;
+  // left: 1390px;
+  left: 1326px;
   top: 1880px;
   border-radius: 57px;
   height: 114px;
@@ -684,7 +688,7 @@ a {
 
 .elizeu-dias-2-e-a-mk-unsplash-1-1 {
   height: 634px;
-  margin-left: 110px;
+  margin-left: 84px;
   object-fit: cover;
   width: 70%;
 }
